--- a/4_passport/package.json
+++ b/4_passport/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev:exmaple": "nodemon src/server.js",
+    "dev": "nodemon src/server_me.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
